# referee_system

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml
.github/workflows/: django.yml
backend/: .env.example  .env.test  Dockerfile  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
backend/api/: serializers.py  urls.py  views.py
backend/competition/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py
backend/competition/migrations/: 0001_initial.py  0002_alter_application_competition_and_more.py  0003_rename_observer_competition_observers_and_more.py  0004_alter_application_options_alter_application_role.py
backend/competition/templates/cometition/: e-mail.html
backend/competition/tests/: test_competition_model.py  test_event_model.py
backend/helper/: admin.py  models.py  serializers.py
backend/helper/migrations/: 0001_initial.py  0002_alter_location_address.py  0003_alter_address_area_code_alter_address_country_and_more.py
backend/ref_sys/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/referee/: admin.py  apps.py  models.py  serializers.py  signals.py
backend/referee/migrations/: 0001_initial.py  0002_alter_examination_date_and_more.py  0003_refereerole_referee_mobile_referee_phone.py  0004_alter_examination_candidate_and_more.py  0005_alter_referee_mobile_alter_referee_phone.py
backend/referee/tests/: test_examination_model.py  test_referee_license_model.py  test_referee_model.py
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx
frontend/src/components/: EventCard.tsx  Events.tsx  Footer.tsx  Form.tsx  Header.tsx  LoadinIndicator.tsx  LoadingIndicator.tsx  Location.tsx  Navbar.tsx  Notification.tsx  ProtectedRoute.tsx  ThemeToggle.tsx
frontend/src/hooks/: useDebounce.ts  useQueries.ts
(+33 files in other folders)
