[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2",
    "django-celery-beat>=2.8.0",
    "django-celery-results>=2.6.0",
    "django-cors-headers>=4.7.0",
    "django-environ>=0.12.0",
    "djangorestframework-simplejwt>=5.5.0",
    "flower>=2.0.1",
    "psycopg2-binary>=2.9.10",
    "python-environ>=0.4.54",
    "redis>=6.0.0",
]
